--- a/ImageProcessing/ImageProcessing.csproj
+++ b/ImageProcessing/ImageProcessing.csproj
@@ -55,6 +55,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="GrayScale.cs" />
+    <Compile Include="Contrast.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
